--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -152,7 +152,7 @@
     <string name="business_office">कारोबार कार्यालय</string>
     <string name="_34_balaji_nagar_bhopal_madhya_pradesh">34 बालाजी नगर, भोपाल मध्य प्रदेश</string>
     <string name="email_address">ईमेल पता</string>
-    <string name="shuklabriefx_in_gmail_com">शुक्लब्रीफ्स.इन@जीमेल.कॉम </string>
+    <string name="shuklabriefx_in_gmail_com">Briefn.in@gmail.com</string>
     <string name="video">वीडियो</string>
     <string name="search">सर्च</string>
     <string name="account_info">अकाउंट इन्फो</string>
