--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,7 +158,7 @@
     <string name="business_office">Business Office</string>
     <string name="_34_balaji_nagar_bhopal_madhya_pradesh">34 Balaji Nagar, Bhopal Madhya Pradesh</string>
     <string name="email_address">Email Address</string>
-    <string name="shuklabriefx_in_gmail_com">Shuklabriefx.in@gmail.com</string>
+    <string name="shuklabriefx_in_gmail_com">Briefn.in@gmail.com</string>
     <string name="video">Video</string>
     <string name="search">SEARCH</string>
     <string name="account_info">Account Info</string>
